--- a/alpha-service/Dockerfile
+++ b/alpha-service/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk:7u211-jdk-alpine3.9
+FROM adoptopenjdk/openjdk11:latest
 VOLUME /tmp
-COPY target/service-aplha-0.0.1-SNAPSHOT.jar app.jar
+COPY target/alpha-service-0.0.1-SNAPSHOT.jar app.jar
 ENV JAVA_OPTS=""
 ENTRYPOINT exec java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9999 -jar /app.jar
