--- a/alpha-service/pom.xml
+++ b/alpha-service/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
     <groupId>com.happyman.cloud.service</groupId>
-	<artifactId>service-alpha</artifactId>
+	<artifactId>alpha-service</artifactId>
 	<name>service-alpha</name>
     <version>0.0.1-SNAPSHOT</version>
     
