--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:7u211-jdk-alpine3.9
+FROM adoptopenjdk/openjdk11:latest
 VOLUME /tmp
 COPY target/gateway-0.0.1-SNAPSHOT.jar app.jar
 ENV JAVA_OPTS=""
