--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -7,12 +7,12 @@
 	<name>gateway</name>
     <version>0.0.1-SNAPSHOT</version>
 
-    <parent>
+    <!--<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.4</version>
 		<relativePath/>
-	</parent>
+	</parent>-->
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,10 +36,9 @@
 
 	<dependencies>
 		 <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-kubernetes-all</artifactId>
-            <version>1.1.10.RELEASE</version>
-        </dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
