--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -20,6 +20,7 @@
 		<java.version>11</java.version>
 
         <spring-cloud.version>2020.0.3</spring-cloud.version>
+		<spring.cloud.k8s.version>1.1.8.RELEASE</spring-cloud.version>
 	</properties>
 
     <dependencyManagement>
@@ -32,6 +33,15 @@
                 <scope>import</scope>
 			</dependency>
 		</dependencies>
+		<dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-kubernetes-dependencies</artifactId>
+                <version>${spring.cloud.k8s.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
 	</dependencyManagement>
 
 	<dependencies>
