--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -20,7 +20,7 @@
 		<java.version>11</java.version>
 
         <spring-cloud.version>2020.0.3</spring-cloud.version>
-		<spring.cloud.k8s.version>1.1.8.RELEASE</spring-cloud.version>
+		<spring.cloud.k8s.version>1.1.8.RELEASE</spring.cloud.k8s.version>
 	</properties>
 
     <dependencyManagement>
