--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -50,7 +50,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-kubernetes-all</artifactId>
-		</dependency>		
+		</dependency>	
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>	
 	</dependencies>
 
 	<build>
