--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -32,13 +32,13 @@
                 <type>pom</type>
                 <scope>import</scope>
 			</dependency>
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-kubernetes-dependencies</artifactId>
                 <version>${spring.cloud.k8s.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 		</dependencies>
 	</dependencyManagement>
 
